# Flatova

./: Flatova.sln  LICENSE  README.md  flatova.cpp  meson.build  todo.txt
Core/: Camera.cs  Core.csproj  MatriciesLearn.csproj  QuaternionUtils.cs  Resolution.cs  Transform.cs  TransformedMesh.cs  WorldObject.cs
Core/Geometry/: CubeMesh.cs  Face.cs  Line3D.cs  Mesh.cs  Plane3D.cs  Triangle3D.cs  TriangleIndex.cs
Core/Geometry/Primitives/: MeshPrimitives.cs
Core/Rendering/: DepthMap.cs  ICanvas.cs  ICanvasRenderer.cs  IRenderDevice.cs  RenderDevice.cs
Core/Rendering/Canvas/: ICanvasRenderer.cs
Core/Utilities/: FaceUtils.cs  MathUtils.cs  Matrix4X4Utils.cs  VectorExtensions.cs
Core/World/: Scene.cs  WorldObject.cs
Core/World/Camera/: Camera.cs  CameraProfile.cs
RaylibImpl/: IApplication.cs  Program.cs  RayLibCanvasRenderer.cs  RaylibImpl.csproj  RenderApplication.cs  SoftEngine.cs
Tests/: FaceUtilsTests.cs  MathUtilsTests.cs  ResolutionTests.cs  TransformTests.cs
private/: fl_application.cpp  fl_logger.cpp  fl_pipeline.cpp  fl_shader_utils.cpp  fl_swapchain.cpp  fl_vk_core.cpp  fl_vk_device_manager.cpp  fl_vk_instance.cpp  fl_vk_manager.cpp  fl_vulkan_utils.cpp  meson.build
public/: fl_application.hpp  fl_logger.hpp  fl_pipeline.hpp  fl_shader_utils.hpp  fl_swapchain.hpp  fl_vk_core.hpp  fl_vk_device_manager.hpp  fl_vk_instance.hpp  fl_vk_manager.hpp  fl_vulkan_utils.hpp
